robotObstacles_JavaCC/source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.HashMap;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {
        // ArrayList<String > varDefinidas = new ArrayList(); // Variables definidas

        HashMap<String, Integer > varDefinidas = new HashMap<String, Integer >();

        private RobotWorldDec world;


        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();

// RP de movimientos
  final public void move() throws ParseException {
    jj_consume_token(MOVE);
    if (jj_2_1(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_2(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void right() throws ParseException {
    jj_consume_token(RIGHT);
    if (jj_2_3(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_4(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void left() throws ParseException {
    jj_consume_token(LEFT);
    if (jj_2_5(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_6(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void rotate() throws ParseException {
    jj_consume_token(ROTATE);
    if (jj_2_7(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_8(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void look() throws ParseException {
        ArrayList<String> charValidos = new ArrayList<String>(Arrays.asList("N", "S", "E", "W"));
    jj_consume_token(LOOK);
    jj_consume_token(ID);
        if (!(charValidos.contains(token.image))) // Check if CHAR is in charValidos
        {
                {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " should be either \u005c"N\u005c", \u005c"S\u005c", \u005c"E\u005c", \u005c"W\u005c"!");}
        }
  }

  final public void drop() throws ParseException {
    jj_consume_token(DROP);
    if (jj_2_9(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_10(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void free() throws ParseException {
    jj_consume_token(FREE);
    if (jj_2_11(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_12(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void pick() throws ParseException {
    jj_consume_token(PICK);
    if (jj_2_13(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_14(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void pop() throws ParseException {
    jj_consume_token(POP);
    if (jj_2_15(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_16(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void check() throws ParseException {
        ArrayList<String> charValidos = new ArrayList<String>(Arrays.asList("C", "B"));
    jj_consume_token(CHECK);
    jj_consume_token(ID);
                if(!(charValidos.contains(token.image)))
                {
                        {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " should be \u005c"C\u005c" or \u005c"B\u005c"!");}
                }
    if (jj_2_17(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_18(2)) {
      jj_consume_token(ID);
  if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
  {
          // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
          {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// BLOCKEDP


// NOP
  final public void block() throws ParseException {
    jj_consume_token(28);
    jj_consume_token(BLOCK);
    comandosMain();
    label_1:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_1;
      }
      comandosMain();
    }
    if (jj_2_21(2)) {
      jj_consume_token(29);
    } else if (jj_2_22(2)) {
      label_2:
      while (true) {
        jj_consume_token(30);
        if (jj_2_20(2)) {
          ;
        } else {
          break label_2;
        }
      }
      jj_consume_token(29);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void repeat() throws ParseException {
    jj_consume_token(REPEAT);
    if (jj_2_23(2)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_24(2)) {
      jj_consume_token(ID);
                                if(!(varDefinidas.containsKey(token.image)))// Check if token.image is in the Array
                                        {
                                                  // System.out.println("\""+ token.image + "\"" + " is not defined!"); // Luego toca lanzar un error.
                                                  {if (true) throw new Error("\u005c""+ token.image + "\u005c"" + " is not defined!");}
                                        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(31);
    comandosMain();
    jj_consume_token(32);
  }

  final public void ifCommand() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(BLOCKEDP);
    jj_consume_token(31);
    comandosMain();
    label_3:
    while (true) {
      if (jj_2_25(2)) {
        ;
      } else {
        break label_3;
      }
      comandosMain();
    }
    jj_consume_token(32);
  }

  final public void define() throws ParseException {
        String llave = "";
        int valor = 0;
    jj_consume_token(DEFINE);
    jj_consume_token(ID);
          llave = token.image;
    jj_consume_token(NUMERO);
          valor = Integer.parseInt(token.image);
          varDefinidas.put(llave, valor);
  }

  final public void to() throws ParseException {
    jj_consume_token(TO);
    jj_consume_token(ID);
    if (jj_2_27(2)) {
      jj_consume_token(33);
      jj_consume_token(ID);
      label_4:
      while (true) {
        if (jj_2_26(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(33);
        jj_consume_token(ID);
      }
    } else {
      ;
    }
    label_5:
    while (true) {
      if (jj_2_28(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(30);
    }
    jj_consume_token(OUTPUT);
    label_6:
    while (true) {
      if (jj_2_29(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(30);
    }
    jj_consume_token(END);
  }

  final public void comandosMain() throws ParseException {
    label_7:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(30);
    }
    if (jj_2_31(2)) {
      move();
    } else if (jj_2_32(2)) {
      right();
    } else if (jj_2_33(2)) {
      left();
    } else if (jj_2_34(2)) {
      rotate();
    } else if (jj_2_35(2)) {
      look();
    } else if (jj_2_36(2)) {
      drop();
    } else if (jj_2_37(2)) {
      free();
    } else if (jj_2_38(2)) {
      pick();
    } else if (jj_2_39(2)) {
      pop();
    } else if (jj_2_40(2)) {
      check();
    } else if (jj_2_41(2)) {
      jj_consume_token(NOP);
    } else if (jj_2_42(2)) {
      block();
    } else if (jj_2_43(2)) {
      repeat();
    } else if (jj_2_44(2)) {
      ifCommand();
    } else if (jj_2_45(2)) {
      define();
    } else if (jj_2_46(2)) {
      to();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Coso raro que es como el start symbol
  final public boolean command(StringBuffer sistema) throws ParseException {
    if (jj_2_48(2)) {
      comandosMain();
      label_8:
      while (true) {
        if (jj_2_47(2)) {
          ;
        } else {
          break label_8;
        }
        comandosMain();
      }
         {if (true) return true;}
    } else if (jj_2_49(2)) {
      jj_consume_token(0);
          {if (true) return false;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }
